Sources moved to a better emplacement

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>Mars Rover Kata</title>
-    <script src="grid.js" type="text/javascript"></script>
-    <script src="rover.js" type="text/javascript"></script>
-    <script src="tests.js" type="text/javascript"></script>
+    <script src="js/grid.js" type="text/javascript"></script>
+    <script src="js/rover.js" type="text/javascript"></script>
+    <script src="js/tests.js" type="text/javascript"></script>
   </head>
   <body>
   </body>
